Changes to the /heartbeat endpoint and other improvements
- Modified /heartbeat so that it took a user key, and stored the user
  key alongside the client IP address.
- Generate actually random user keys when we hit /generate_user_key
- Retrieve keys of peers when we hit the /clients endpoint.
